--- a/package.json
+++ b/package.json
@@ -16,5 +16,13 @@
   "bugs": {
     "url": "https://github.com/JoelKovalcson/ChattleShip/issues"
   },
-  "homepage": "https://github.com/JoelKovalcson/ChattleShip#readme"
+  "homepage": "https://github.com/JoelKovalcson/ChattleShip#readme",
+  "dependencies": {
+    "bcrypt": "^5.0.1",
+    "dotenv": "^14.2.0",
+    "express": "^4.17.2",
+    "handlebars": "^4.7.7",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.13.0"
+  }
 }
