--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/JoelKovalcson/ChattleShip#readme",
   "dependencies": {
+    "@tailwindcss/typography": "^0.5.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
