--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+	"start": "node server.js",
+	"buildcss": "npx tailwindcss -i style.css -o public/css/tail-style.css"
   },
   "repository": {
     "type": "git",
