--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-	"start": "node server.js",
-	"buildcss": "npx tailwindcss -i style.css -o public/css/tail-style.css"
+    "start": "node server.js",
+    "buildcss": "npx tailwindcss -i style.css -o public/css/tail-style.css"
   },
   "repository": {
     "type": "git",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.0",
     "bcrypt": "^5.0.1",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "express-handlebars": "^6.0.2",
